# wiki_events_pipeline

./: .gitignore  DESIGN.md  README.md  TECHNICAL_DESIGN.md  backup_docker-compose.monolith.yml  basic_poc.py  config.yaml  docker-compose.analytics.yml  docker-compose.compute.yml  docker-compose.infra.yml  docker-compose.ingestion.yml  docker-compose.yml  pyproject.toml
archive/: pyspark_batch.py  using_pywikibot.py
common/: config.py
consumer/: Dockerfile  requirements.txt
consumer/app/: main.py
misc/: example_response.json  useful_commands.sh
producer/: Dockerfile  requirements.txt
producer/app/: main.py
